# xnvme

./: .clang-format  .git-blame-ignore-revs  .git_push_helper  .gitignore  .gitmodules  .pre-commit-config.yaml  .push_trigger  .squash_complete  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  ISSUES  ISSUES.rst  MAINTAINERS.md  Makefile  Makefile.lb  README.md  README_SQUASH.md  REUSE.toml  SQUASH_STATUS.md  build.bat  configure  lb.yaml  lgtm.yml  meson.build  meson_options.txt  xnvme.spec.in
cijoe/: .gitignore  Makefile  README.rst  pyproject.toml
cijoe/auxiliary/: bench-latency-runs.yaml  bench-upcie-iommu-overhead-runs.yaml  plot-latency-legends.yaml  plot-latency-limits.yaml  plot-legends.yaml  plot-limits-4k-aio.yaml  plot-limits-4k.yaml  plot-limits-512.yaml  plot-styles.yaml  xnvme_linking.c  xnvme_loading.c
cijoe/configs/: ax42-freebsd.toml  ax42-linux-testing.toml  ax42-linux.toml  ax42-windows.toml  bench-amd.toml  bench-intel.toml  debian-bookworm-arm.toml  debian-bullseye.toml  debian-trixie-iommu_disabled.toml  debian-trixie-iommu_enabled.toml  debian-trixie-noiommu.toml  debian-trixie.toml  default-config.toml  fio.toml  freebsd-13.toml  freebsd-14.toml  macos-sonoma.toml  perf-lat-freebsd.toml  perf-lat-linux.toml  perf-lat-windows.toml  ramdisk-freebsd.toml  ramdisk-linux.toml  ramdisk-macos.toml  ramdisk-windows.toml  ramdisk.toml  system_imaging.toml  upcie-iommu-overhead-report.toml  upcie-iommu-overhead-uio.toml  upcie-iommu-overhead-vfio.toml  verify-phys-linux.toml  verify-phys-macos.toml  xnvme.toml
cijoe/scripts/: bdevperf.py  bench_plotter.py  bench_reporter.py  benchmark_normalize.py  build_kdebs_tweaked.py  fio_build.py  fio_latency.py  fio_prep.py  fio_prep_windows.py  freebsd_sysinfo.py  gha_docgen.py  gha_prepare_aux.py  gha_prepare_hugetlbfs.py  gha_prepare_python.py  gha_prepare_source.py  git_push_checkout.py  git_sync.py  latency_plotter.py  latency_reporter.py  liburing_build.py  linux_kdebs_build_tweaked.py  linux_nvme_prep.py  linux_setup_hugepages.py  linux_setup_hugetlbfs.py  macvfn_build_and_install.py  nvme_target_probe.py  nvme_target_start.py  nvme_target_stop.py  plotter.py  reporter.py  reporter_templates.py  root_unlock.py  spdk_bdev_confs_generator.py  spdk_build_modded.py  spdk_build_modded_freebsd.py  spdk_fio_plugin.py  stage_nosi_guest.py  sysinfo_report.py  upcie_iommu_overhead.py  upcie_iommu_overhead_compare.py  (+18 more)
cijoe/tests/: conftest.py  xnvme_be_combinations.py
cijoe/workflows/: bench.yaml  benchmark-latency.yaml  benchmark-provisioning-freebsd.yaml  benchmark-provisioning-linux.yaml  benchmark-provisioning-windows.yaml  benchmark-upcie-iommu-overhead.yaml  benchmark_latency.yaml  bootimg-debian-bullseye-amd64.yaml  bootimg-debian-trixie-amd64.yaml  bootimg-freebsd-13-amd64.yaml  bootimg-freebsd-14-amd64.yaml  build-kdebs.yaml  docgen.yaml  (+29 more)
examples/: CMakeLists.txt  meson.build  xnvme_compute_hermes.c  xnvme_cuda.cu  xnvme_cuda_mem_map.cu  xnvme_dev.c  xnvme_enum.c  xnvme_hello.c  xnvme_io_async.c  xnvme_single_async.c  xnvme_single_async_efd.c  xnvme_single_sync.c  zoned_io_async.c  zoned_io_sync.c
include/: liblblk.h  libxnvme.h  libxnvme_3p.h  libxnvme_adm.h  libxnvme_be.h  libxnvme_buf.h  libxnvme_cli.h  libxnvme_cmd.h  libxnvme_compute.h  libxnvme_cuda.h  libxnvme_dev.h  libxnvme_file.h  libxnvme_geo.h  libxnvme_ident.h  libxnvme_kvs.h  libxnvme_lba.h  libxnvme_libconf.h  libxnvme_mem.h  libxnvme_nvm.h  libxnvme_opts.h  libxnvme_pi.h  libxnvme_pp.h  libxnvme_queue.h  libxnvme_scan.h  libxnvme_sgl.h  libxnvme_spec.h  libxnvme_spec_fs.h  libxnvme_spec_pp.h  libxnvme_topology.h  libxnvme_util.h  libxnvme_ver.h  libxnvme_znd.h  libxnvmec.h  libznd.h  meson.build  xnvme.h  xnvme_async.h  xnvme_be.h  xnvme_be_cbi.h  xnvme_be_compute.h  (+44 more)
lib/: MacVFNShared.h  libxnvme.map  meson.build  xnvme_3p.c  xnvme_3p_ver.c  xnvme_adm.c  xnvme_be.c  xnvme_be_cbi_admin_shim.c  xnvme_be_cbi_async_emu.c  xnvme_be_cbi_async_nil.c  xnvme_be_cbi_async_posix.c  xnvme_be_cbi_async_thrpool.c  xnvme_be_cbi_mem_posix.c  xnvme_be_cbi_sync_psync.c  xnvme_be_cref.c  xnvme_be_fbsd.c  xnvme_be_fbsd_async.c  xnvme_be_fbsd_dev.c  xnvme_be_fbsd_nvme.c  xnvme_be_fbsd_sync.c  xnvme_be_freebsd.c  xnvme_be_freebsd_async.c  xnvme_be_freebsd_dev.c  xnvme_be_freebsd_nvme.c  xnvme_be_libvfn.c  xnvme_be_libvfn_admin.c  xnvme_be_libvfn_async.c  xnvme_be_libvfn_dev.c  xnvme_be_libvfn_mem.c  xnvme_be_libvfn_sync.c  xnvme_be_linux.c  xnvme_be_linux_async_libaio.c  xnvme_be_linux_async_liburing.c  xnvme_be_linux_async_ucmd.c  xnvme_be_linux_block.c  xnvme_be_linux_dev.c  xnvme_be_linux_hugepage.c  xnvme_be_linux_nvme.c  xnvme_be_macos.c  xnvme_be_macos_admin.c  (+81 more)
man/: README.rst  kvs-delete.1  kvs-enum.1  kvs-exist.1  kvs-idfy-ns.1  kvs-list.1  kvs-retrieve.1  kvs-store.1  kvs.1  lblk-dir-receive.1  lblk-dir-send.1  lblk-enum.1  lblk-idfy.1  lblk-info.1  lblk-lblk.1  lblk-read.1  lblk-write-dir.1  lblk-write-uncor.1  lblk-write-zeros.1  lblk-write.1  lblk.1  meson.build  nvmec-create.1  nvmec-show.1  nvmec.1  xdd-async.1  xdd-sync.1  xdd.1  xnvme-driver.txt  xnvme-dsm.1  xnvme-enum.1  xnvme-fdp-ruhs.1  xnvme-fdp-ruhu.1  xnvme-feature-get.1  xnvme-feature-set.1  xnvme-format.1  xnvme-idfy-cs.1  xnvme-idfy-ctrlr.1  xnvme-idfy-ns.1  xnvme-idfy.1  (+116 more)
tests/: CMakeLists.txt  async_intf.c  async_limbo.c  be_families.c  buf.c  cli.c  compare.c  copy.c  ctrlr.c  delay_identification.c  dual_be.c  enum.c  ident.c  ioworker.c  kvs.c  lblk.c  map.c  meson.build  metadata.c  mproc.c  scc.c  xnvme_cli.c  xnvme_file.c  xnvmec.c  znd_append.c  znd_explicit_open.c  znd_state.c  znd_zrwa.c
toolbox/: Dockerfile  build_vfu_kvssd.sh  clang-format-c  clang-format-h  dev_setup_check.py  guest_select.py  library_bundler.py  meson.build  meson_dist_archive_fixer.py  meson_dist_deb_build.py  pcf_clang_format.py  pcm_ascii_only.py  pre-commit-check.sh  print_help.py  stage_nosi_guest.py  xnvme-driver.sh  xnvme_libconf.py  xnvme_ver.py  xnvmec_generator.py
tools/: CMakeLists.txt  kvs.c  lblk.c  meson.build  nvmec.c  xdd.c  xnvme.c  xnvme_file.c  xnvmeperf.c  zoned.c
(+1653 files in other folders)
